--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,15 @@
     "require": {
         "php": "^7.3|^8.0",
         "almasaeed2010/adminlte": "~2.4",
+        "barryvdh/laravel-dompdf": "^2.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
-        "laravelcollective/html": "^6.3"
+        "laravelcollective/html": "^6.3",
+        "milon/barcode": "^10.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -23,6 +25,7 @@
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3"
+
     },
     "autoload": {
         "psr-4": {
