--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "laravelcollective/html": "^6.3",
+        "maatwebsite/excel": "^3.1",
         "milon/barcode": "^10.0"
     },
     "require-dev": {
